# memgrind-c

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  memgrind_c.c  memgrind_c.h
doc/: doc.md
libs/: CMakeLists.txt
src/: CMakeLists.txt  memgrind_c.c
